--- a/nav-alice-psicologo/perfilPsic.html
+++ b/nav-alice-psicologo/perfilPsic.html
@@ -188,7 +188,8 @@
         <div id="header" class="container">
             <nav id="nav" class="psic-index-nav">
                 <ul>
-                    <li><a href="../index.html">Inicio</a></li>
+                    <li><a href="perfilPsic.html">Inicio</a></li>
+                     <li><a href="/psicologo_/historial_clinico.html">Historial Clínico</a></li>
                     <li>
                         <a href="psicIndex.html">Ayuda inmediata</a>
                         <ul>
