--- a/index.html
+++ b/index.html
@@ -133,14 +133,23 @@
                     <ul>
                         <li><a href="index.html">Inicio</a></li>
                         <li>
-                            <a href="#">Ayuda inmediata</a>
+                            <a href="nav-alice-psicologo/psicIndex.html">Ayuda inmediata</a>
                             <ul>
                                 <li>
                                     <a href="https://api.whatsapp.com/send?phone=525635164983&text=tengo%20una%20crisis" target="_blank">
-                                        📲 Ayuda por WhatsApp
+                                        <i class="fab fa-whatsapp" style="margin-right: 8px;"></i> Ayuda por WhatsApp
                                     </a>
                                 </li>
-                                <li><a href="tel:+525521288236">📞 Línea de Ayuda</a></li>
+                                <li>
+                                    <a href="tel:+525524814754">
+                                        <i class="fas fa-headset" style="margin-right: 8px; color: #007bff;"></i> Línea de Ayuda
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="tel:+525564214951">
+                                        <i class="fas fa-headset" style="margin-right: 8px; color: #007bff;"></i> Consejo ciudadano
+                                    </a>
+                                </li>
                                 <li><a href="nav-alice-psicologo/login_psicologo.html">🔐 Acceso Psicólogos</a></li>
                             </ul>
                         </li>
