--- a/nav-alice-usuarios/login.html
+++ b/nav-alice-usuarios/login.html
@@ -53,6 +53,22 @@
                                 </ul>
                             </div>
 
+                            <div class="col-12">
+                                <a href="../index.html" style="
+        display: inline-block;
+        padding: 12px 40px;
+        background-color: #7fb8d3; /* Color azul claro de la imagen */
+        color: white;
+        text-decoration: none;
+        border: 1px solid #ccc;
+        border-radius: 12px; /* Esquinas redondeadas */
+        font-family: sans-serif;
+        font-size: 18px;
+        cursor: pointer;
+        text-align: center;
+    ">volver</a>
+                            </div>
+
                             <div class="col-12 texto-legal">
                                 <p>Al continuar, aceptas las <a href="#">Condiciones de uso</a> y el <a href="#">Aviso
                                         de privacidad</a> de la compañía.</p>
@@ -67,7 +83,7 @@
                     <div>
                         <button id="googleLogin" class="button-google w-100 mb-4">Iniciar sesión con Google</button>
                     </div>
-               </section>
+                </section>
             </div>
         </div>
 
