--- a/nav-alice-chatbot/index.html
+++ b/nav-alice-chatbot/index.html
@@ -179,6 +179,7 @@
     </div>
   </div>
 
+  <script src="config.js"></script>
   <script src="chatbot.js"></script>
   <script type="module" src="script.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
