--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                     <ul>
                         <li><a href="index.html">Inicio</a></li>
                         <li>
-                            <a href="nav-alice-psicologo/psicIndex.html">Ayuda inmediata</a>
+                            <a href="">Ayuda inmediata</a>
                             <ul>
                                 <li>
                                     <a href="https://api.whatsapp.com/send?phone=525635164983&text=tengo%20una%20crisis" target="_blank">
